--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/orgrobolectric-1109" }
         jcenter()
     }
 }
