Update to Gradle 8.3 and AGP 7.3

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,16 @@
-include ':app'
-include ':fontlibrary'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = "RoboBugs"
+include ':app'
